Do not show "Show all save passwords" fallback for chrome:// and about:// pages

BUG=758158

Change-Id: I6d6b2684d75a28461eeff7dcd3e15da6820c4aba
Reviewed-on: https://chromium-review.googlesource.com/628679
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Commit-Queue: Tatiana Gornak <melandory@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497059}